--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@progress/kendo-drawing": "^1.17.3",
+    "@progress/kendo-licensing": "^1.3.0",
+    "@progress/kendo-react-pdf": "^5.11.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -19,9 +22,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1",
-    "react-simple-typewriter": "^5.0.1",
-    "react-to-print": "^2.14.11"
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
