--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,4 @@
 # These are supported funding model platforms
-
 github: sauravhathi
 patreon: # Replace with a single Patreon username
 open_collective: # Replace with a single Open Collective username
@@ -10,4 +9,8 @@ liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
 lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
-custom: ['saurav.34@paytm','https://www.buymeacoffee.com/sauravhathi', 'https://donate.stripe.com/aEU7t2d4O5QD024eUU']
+custom:
+  - saurav.34@paytm
+  - https://www.buymeacoffee.com/sauravhathi
+  - https://donate.stripe.com/aEU7t2d4O5QD024eUU
+  - https://www.paypal.com/sauravkumar680
