--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-highlight-menu": "^2.0.2",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
