--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -10,7 +10,7 @@ issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
 lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
 custom:
-  - saurav.34@paytm
+  - devjs@jio
   - https://www.buymeacoffee.com/sauravhathi
   - https://donate.stripe.com/aEU7t2d4O5QD024eUU
   - https://paypal.me/sauravkumar680
