--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,15 @@
 /node_modules
 /.pnp
 .pnp.js
+package-lock.json
+yarn.lock
 
 # testing
 /coverage
 
 # next.js
 /.next/
+/.idea/
 /out/
 
 # production
