--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --cache",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
     "next": "15.5.2",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -22,9 +22,19 @@
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^15",
     "autoprefixer": "^10.4.13",
+    "eslint": "^9",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jsx-a11y": "^6",
+    "eslint-plugin-prettier": "^5",
+    "eslint-plugin-react": "^7",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^10.4.0",
     "postcss": "^8.4.21",
+    "prettier": "^3",
     "tailwindcss": "^3.2.4",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "typescript-eslint": "^8"
   }
 }
